# AoC

2024/: CMakeLists.txt
2024/input/day1/: example.h  input.h
2024/input/day10/: example.h  input.h
2024/input/day11/: example.h  input.h
2024/input/day12/: example.h  input.h
2024/input/day13/: example.h  input.h
2024/input/day14/: example.h  input.h
2024/input/day15/: example.h  example2.h  input.h
2024/input/day2/: example.h  input.h
2024/input/day3/: example.h  example2.h  input.h
2024/input/day4/: example.h  example.txt  input.h  input.txt
2024/input/day5/: example.h  input.h
2024/input/day6/: example.h  input.h
2024/input/day7/: example.h  input.h
2024/input/day8/: example.h  input.h
2024/input/day9/: example.h  input.h
2024/input/src/: day10.cc  day11.cc  day9.cc  read_file.h  utils.h
2024/src/: day1.cc  day10.cc  day11.cc  day12.cc  day13.cc  day14.cc  day15.cc  day2.cc  day3.cc  day4.cc  day5.cc  day6.cc  day7.cc  day8.cc  day9.cc  point.h  read_file.h  utils.h
2025/: CMakeLists.txt
2025/src/: day1.cc  day10.cc  day11.cc  day2.cc  day3.cc  day4.cc  day5.cc  day6.cc  day7.cc  day8.cc  day9.cc  point.h  read_file.h  utils.h
